@@ -1,6 +1,7 @@
 Revision history for URI
 
 {{$NEXT}}
+    - Update documentation for URI::_punycode (GH Issue #45)
 
 1.72      2017-07-25
     - Convert the dist to Dist::Zilla for authoring.
